--- a/newData/tableDemo(rightDataes)/table3.html
+++ b/newData/tableDemo(rightDataes)/table3.html
@@ -26,7 +26,21 @@
               "url":"objects.txt",
 
               "dataSrc":"db2alertdetail"
-             }
+             },
+            "oLanguage": {
+                "sLengthMenu": "每页显示 _MENU_ 条记录",
+                "sZeroRecords": "没有检索到数据",
+                "sInfo": "从 _START_ 到 _END_ /共 _TOTAL_ 条数据",
+                "sInfoEmpty": "没有数据",
+                "sInfoFiltered": "(从 _MAX_ 条数据中检索)",
+                "sSearch": "查找账户",
+                "oPaginate": {
+                    "sFirst": "首页",
+                    "sPrevious": "前一页",
+                    "sNext": "后一页",
+                    "sLast": "尾页"
+                }
+            },
 
         } );
 
